<resources>
    <string name="app_name">WeatherForecCast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="initial_setup">initial_setup</string>
    <string name="map">Map</string>
    <string name="notifications">Notifications</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="done">Done</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End date</string>
    <string name="end_time">End Time</string>
    <string name="alarm">Alarm</string>
    <string name="save">Save</string>
    <string name="tuesday">Tuesday</string>
    <string name="sunny">Sunny</string>
    <string name="_20_38c">20/38C</string>
    <string name="country">Country</string>
    <string name="mon_july_6">Mon July 6</string>
    <string name="alexandria_egypt">Alexandria/Egypt</string>
    <string name="_28_c">28 C</string>
    <string name="arabic">Arabic</string>
    <string name="settings">Settings</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="metric_second">Metric/Second</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="temperature">Temperature and Wind Speed</string>
    <string name="celsius">Celsius(meter/sec)</string>
    <string name="kelvin">Kelvin(meter/sec)</string>
    <string name="fahrenheit">Fahrenheit(miles/hour)</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="home">Home</string>
    <string name="alerts">Alerts</string>
    <string name="favorites">Favorites</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="cloud">Cloud</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="visibility">Visibility</string>
</resources>