<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="30dp"
   >

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tuesday"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/weekIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_baseline_wb_sunny_24" />

    <TextView
        android:id="@+id/weatherStatus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/sunny"
        android:textColor="#FFFFFF"

        android:textSize="12sp" />

    <TextView
        android:id="@+id/weekCelisios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/_20_38c"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />
</LinearLayout>